minor code changes

--- a/_random/apis.html
+++ b/_random/apis.html
@@ -27,6 +27,9 @@
         })
         .then(function(response) {
             img.src = response.data.images.original.url;
+        })
+        .catch((error) => {
+          console.error('Error:', error);
         });    
     }
 
