--- a/Webpack/webpack_beginners/index.html
+++ b/Webpack/webpack_beginners/index.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
+    <h1>Text</h1>
   <script type="text/javascript" src="dist/main.js"></script>
   </body>
 </html>
